--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,6 @@ img {
 /* --- studio [home] page --- */
 .intro {
     background-color: var(--primary-background-color-dark);
-    height: 600px;
     left: 0px;
     top: 80px;
 }
@@ -222,7 +221,7 @@ img {
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    padding: 30px;
+    margin-bottom: 30px;
 }
 .hero-btn {
     color: var(--primary-text-color-white);
@@ -265,12 +264,14 @@ img {
 .about-description {
     color: var(--secondary-text-color);
 
+    width: 270px;
+
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    padding-top: 10px;
+    margin-top: 10px;
 }
 
 .work {
@@ -322,10 +323,13 @@ img {
     text-align: center;
     letter-spacing: 0.03em;
 }
+.team-info {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
 .team-title {
     color: var(--primary-text-color-dark);
 
-    padding-top: 30px;
     padding-left: auto;
     padding-right: auto;
     padding-bottom: 10px;
@@ -343,7 +347,6 @@ img {
     padding-top: 0px;
     padding-left: auto;
     padding-right: auto;
-    padding-bottom: 30px;
 
     font-style: normal;
     font-weight: 400;
